fixing schedule on mobile

--- a/assets/css/schedule.less
+++ b/assets/css/schedule.less
@@ -321,6 +321,30 @@
 }
 
 @media screen and (max-width: 600px) {
+
+	.two-col {
+		width: 100%;
+		display: block;
+	}
+
+	#schedule .week {
+		padding-bottom: 0px;
+		border-top: 0;
+		
+		.day {
+			width: 100%;
+
+			.date {
+				border-top: 1px solid #ccc;
+				padding-bottom: 70px;
+
+				.right-border {
+					border-right: 0;
+				}
+			}
+		}
+	}
+
 	#today {
 		top: 100px;
 		background-color: #fbfbfb !important;
